Added test images

--- a/FaceDetection.ipynb
+++ b/FaceDetection.ipynb
@@ -23,13 +23,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image1 = cv2.imread(r\"image1.jpg\", 0)\n",
+    "image2 = cv2.imread(r\"image2.jpg\", 0)"
    ]
   }
  ]
